# buildstream-plugins

./: .asf.yaml  .pylintrc  COMMITTERS.rst  MANIFEST.in  NEWS  NOTICE  README.rst  docs.tgz  genindex.html  index.html  objects.inv  project.conf  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: common.env  run-ci.sh
.github/compose/: ci.docker-compose.yml
.github/workflows/: ci.yml  merge.yml
_static/: documentation_options.js
doc/: Makefile
doc/source/: conf.py  index.rst
docs/: docs.tgz  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/elements/: autotools.rst.txt  cmake.rst.txt  make.rst.txt  meson.rst.txt  pip.rst.txt  setuptools.rst.txt
docs/elements/: autotools.html  cmake.html  make.html  meson.html  pip.html  setuptools.html
docs/sourcemirrors/: gitlab_lfs_mirror.html  simple_mirror.html
docs/sources/: bzr.html  cargo.html  docker.html  git.html  patch.html  pip.html
elements/: autotools.html  cmake.html  make.html  meson.html  pip.html  setuptools.html
requirements/: mypy-requirements.txt  plugin-requirements.txt  test-requirements.txt
sources/: bzr.html  cargo.html  docker.html  git.html  patch.html  pip.html
src/buildstream_plugins/: __init__.py
tests/: bzr_wrapper  conftest.py
tests/cachekey/: cachekey.py
tests/elements/: autotools.py  cmake.py  make.py  meson.py  pip.py  setuptools.py
tests/sources/: bzr.py  cargo.py  docker.py  git.py  patch.py  pip.py  pip_build.py
tests/testutils/: python_repo.py  site.py
(+94 files in other folders)
